memory-infra: clean up order of callback arguments

Minor non-functional cleanup. Just makes the order of
memory-infra API consistent.

BUG=735849

Change-Id: Ibca6e8153ab33f19fdc415e8cad211a49252e1d2